--- a/ngin_balance/nginx/nginx.conf
+++ b/ngin_balance/nginx/nginx.conf
@@ -6,15 +6,18 @@ events {
 
 http{
 
-  #upstream web {
-  #  server web:8000;
-  #}
+  upstream webserver {
+    least_conn;
+    server web:8000 weight=4;
+    server web1:8000 weight=2;
+    server web2:8000;
+  }
   server {
     listen 80;
     listen [::]:80;
-    server_name web;
+    
     location / {
-       proxy_pass http://web:8000;
+       proxy_pass http://webserver;
     }
  }
 
